# itercat

./: .flake8  .gitignore  LICENSE  checks.sh  pyproject.toml  requirements.txt  runtests.py  setup.cfg
itercat/: __init__.py  _map.py  test.py
test/: _test.py  chain.py  hello.py  sequence.py  test_chain.py
