[project]
name = "itercat"
version = "0.0.1"
description = "Coding idioms for stream-based concatenative programming (e.g. \"pipelines\")."
authors = [
    { name = "Benoit Hamelin", email = "benoit@benoithamelin.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "marimo>=0.13.8",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.9",
]
