[metadata]
name = itercat
version = 0.0.1
author = Benoit Hamelin
author_email = benoit@benoithamelin.com
description = Coding idioms for stream-based concatenative programming (e.g. "pipelines").
long_description = file: README.md
long_description_content_type: text/markdown
keywords = data map, visualization, topic modelling, cluster, clustering
url = https://github.com/hamelin/itercat
license = MIT License
license_files = LICENSE
classifiers =
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Interpreters

[options]
python_requires = >=3.11
packages = find:

[options.packages.find]
exclude = test
